Error Mitigation/MagiCoder/Data/java_awt_datatransfer/java_awt_datatransferOutputResult.txt
Sample: Clipboard_1
----------------------------------------------------------------
output:
./Data/java_awt_datatransfer/javaFiles/Clipboard_1.java:9: error: cannot find symbol
        Clipboard clipboard = Toolkit.getDefaultToolkit().getSystemClipboard();
                              ^
  symbol:   variable Toolkit
  location: class Clipboard_1
1 error


================================================================

Sample: Clipboard_2
----------------------------------------------------------------
stderr:
Exception in thread "main" java.awt.HeadlessException: 
No X11 DISPLAY variable was set,
but this program performed an operation which requires it.
	at java.desktop/sun.awt.HeadlessToolkit.getSystemClipboard(HeadlessToolkit.java:216)
	at Clipboard_2.main(Clipboard_2.java:10)

================================================================

Sample: DataFlavor_2
----------------------------------------------------------------
stdout:
Unicode String

================================================================

Sample: DataFlavor_3
----------------------------------------------------------------
stdout:
MIME Type: application/x-java-serialized-object; class=java.lang.String

================================================================

